# my-comfyui-nodes

./: .codacy.yml  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  ISSUES_AND_CORE_AREAS.md  README.md  UPSTREAMS.tsv  bandit.yaml  pytest.ini
.specify/: feature.json  init-options.json  integration.json
comfy-cli-patches/: add-local-nodes-command.patch  manifest.md
comfyui-patches/: comfy-sd-qwen-image-vae.patch  manifest.md
custom_nodes/: __init__.py
custom_nodes/ComfyUI-Qwen3.5-Uncensored/: .gitignore  AILab_OutputCleaner.py  AILab_QwenVL.py  AILab_QwenVL_GGUF.py  AILab_QwenVL_GGUF_PromptEnhancer.py  AILab_QwenVL_PromptEnhancer.py  AILab_System_Prompts.json  README.md  __init__.py  custom_nodes.json  gguf_models.json  hf_models.json  pyproject.toml  requirements.txt  sageattention_patch.py
custom_nodes/ComfyUI-Qwen3.5-Uncensored/nodes/: story_split_node.py  vram_cleanup.py
custom_nodes/ComfyUI-Qwen3.5-Uncensored/runpod/: BUILD_SCRIPTS.md  build-local-4090.sh  build-local-5090.sh
custom_nodes/ComfyUI_Simple_Qwen3-VL-gguf/: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  llavavl_run.py  pyproject.toml  qwen3vl_node.py  qwen3vl_run.py  system_prompts.json  system_prompts_user.example.json
custom_nodes/ComfyUI_Simple_Qwen3-VL-gguf/.github/workflows/: publish.yml
custom_nodes/ComfyUI_Simple_Qwen3-VL-gguf/example/: Qwen3-VL-old.json  Qwen3-VL.json
docs/: model-library.md  workflow.md
scripts/: apply-comfy-cli-patches.sh  apply-comfyui-patches.sh  comfy-install-with-local-nodes.sh  comfy-launch-with-local-nodes.sh  comfygo  (+15 more)
(+98 files in other folders)
